# Bindigo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: MVP.md  README.md  design.md  scope.md
examples/: 01_getting_started.md  02_python_api_guide.md  03_quick_reference.md  README.md  example_basic_prediction.py  example_cli_workflow.sh
scripts/: README.md  test_installation.sh  validate.py  validate_package.sh
src/bindigo/: __init__.py  __version__.py
src/bindigo/cli/: __init__.py  info.py  main.py  predict.py  utils.py
src/bindigo/core/: __init__.py  config.py  pipeline.py
src/bindigo/data/examples/: README.md
src/bindigo/data/test_cases/: README.md
src/bindigo/database/: __init__.py
src/bindigo/docking/: __init__.py
src/bindigo/ml/: __init__.py
src/bindigo/models/: README.md
src/bindigo/preprocessing/: __init__.py
src/bindigo/utils/: exceptions.py  io.py  logging.py  validation.py
src/bindigo/visualization/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_config.py  test_exceptions.py  test_imports.py  test_validation.py  test_version.py
