[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bindigo"
version = "0.1.0"
description = "Protein-ligand binding affinity prediction using molecular docking and machine learning"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Bindigo Contributors", email = "bindigo@example.com"}
]
maintainers = [
    {name = "Bindigo Contributors", email = "bindigo@example.com"}
]
keywords = [
    "drug-discovery",
    "molecular-docking",
    "binding-affinity",
    "cheminformatics",
    "computational-chemistry",
    "machine-learning",
    "autodock-vina"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "rdkit>=2022.09",
    "biopython>=1.79",
    "click>=8.0",
    "requests>=2.26",
    "joblib>=1.0",
]

[project.optional-dependencies]
docking = [
    "vina>=1.2.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "isort>=5.10",
]
viz = [
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/bindigo/bindigo"
Documentation = "https://bindigo.readthedocs.io"
Repository = "https://github.com/bindigo/bindigo"
"Bug Tracker" = "https://github.com/bindigo/bindigo/issues"

[project.scripts]
bindigo = "bindigo.cli.main:cli"

[tool.setuptools]
packages = {find = {where = ["src"]}}  # Find packages in src/ directory

[tool.setuptools.package-data]
bindigo = [
    "models/*.pkl",
    "models/*.json",
    "data/examples/*",
    "data/test_cases/*",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src/bindigo --cov-report=term-missing"
testpaths = [
    "tests",
]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
